--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -1399,8 +1399,8 @@
     }
    ],
    "source": [
-    "categoricals = pd.DataFrame(df1.select_dtypes(\"object\"))\n",
-    "categoricals"
+    "categorical = pd.DataFrame(df1.select_dtypes(\"object\"))\n",
+    "categorical"
    ]
   },
   {
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "7ff95779-5a98-4958-88dd-8e462701e4af",
    "metadata": {},
    "outputs": [
@@ -1642,7 +1642,7 @@
        "[9134 rows x 7 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "fa1c2450-b119-4619-9d45-671074682970",
    "metadata": {},
    "outputs": [
@@ -1852,7 +1852,7 @@
        "[9134 rows x 7 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "id": "7a29c8c2-23d7-4c9c-8a7e-8328c1dea6ba",
    "metadata": {},
    "outputs": [
@@ -2283,7 +2283,7 @@
        "[9134 rows x 1 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "id": "ad704027-fe66-4e9b-b89e-106bb90d3d05",
    "metadata": {},
    "outputs": [
@@ -2414,7 +2414,7 @@
        "[9134 rows x 3 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "1fda315d-6fe6-4331-be61-303388ca575e",
    "metadata": {},
    "outputs": [
@@ -2589,7 +2589,7 @@
        "Name: marital_status, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2613,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "a0b0f2f8-c6d9-4a59-bc7b-3a68b44cb033",
    "metadata": {},
    "outputs": [
@@ -2855,14 +2855,14 @@
        "[9134 rows x 10 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_cat_treated = pd.concat([x_normalized, onehot_encoded], axis=1)\n",
-    "X_cat_treated"
+    "X_treated = pd.concat([x_normalized, onehot_encoded], axis=1)\n",
+    "X_treated"
    ]
   },
   {
@@ -2879,19 +2879,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "112b41de-a327-498f-b32f-b25d83abfa03",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_cat_treated, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_treated, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "db3d663d-d6ac-4ba9-b005-ca15261c4d57",
    "metadata": {},
    "outputs": [
@@ -2923,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "0dbdf2ef-a682-4c48-8774-b7ddb1578536",
    "metadata": {},
    "outputs": [
@@ -2941,7 +2941,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2975,7 +2975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "id": "d761d5ef-a86c-4a19-8035-cb2d65c391bf",
    "metadata": {},
    "outputs": [
@@ -3011,7 +3011,7 @@
     "print(\"R2 score por testing is:\", r2_score(y_test, test_predictions))\n",
     "print(\"MSE for testing is:\", mean_squared_error(y_test, test_predictions))\n",
     "print(\"RMSE for testing is:\", np.sqrt(mean_squared_error(y_test, test_predictions)))\n",
-    "print(\"MAE for testing is:\", mean_absolute_error(y_test, predictions))"
+    "print(\"MAE for testing is:\", mean_absolute_error(y_test, test_predictions))"
    ]
   }
  ],
